--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
   </head>
   <body class="page">
     <header class="header decorated-zone">
+      <div class="rec-label">REC</div>
       <nav class="header__theme-menu">
         <ul class="header__theme-menu-list">
           <li class="header__theme-menu-item">
@@ -44,10 +45,13 @@
         </ul>
       </nav>
       <h1 class="header__title">no focus</h1>
-      <h2 class="header__text text_h2">
-        Что делать, когда не можешь делать ничего <br />
-        Или почему нам так сложно сконцентрироваться, особенно когда очень надо
-      </h2>
+      <div class="header__paragraph">
+        <p class="title-decor">
+          Что делать, когда не можешь делать ничего <br />
+          Или почему нам так сложно сконцентрироваться, особенно когда очень
+          надо
+        </p>
+      </div>
     </header>
     <main></main>
     <footer></footer>
