--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
           Почему сосредоточиться так сложно
         </h2>
         <h3 class="heading title-decor">Многозадачность</h3>
-        <p>
+        <p class="section-text">
           Особенно сложно сосредоточиться, когда задач много и все они — важные.
           Где же легендарная многозадачность, когда она так нужна вам (и всем
           нанимающим менеджерам этого мира)? А дело в том, что её просто не
@@ -70,7 +70,7 @@
           ошибаемся и быстро устаём.
         </p>
         <h3 class="heading title-decor">Дофамин</h3>
-        <p>
+        <p class="section-text">
           С гормонами стресса всё понятно, но дальше — ещё интереснее. В нашей
           невозможности сосредоточиться замешана и полная противоположность
           стрессу — дофамин. Это вещество участвует в системе вознаграждения
@@ -86,7 +86,7 @@
           Что снижает концентрацию внимания?
         </h2>
         <h3 class="heading title-decor">Многозадачность</h3>
-        <p>
+        <p class="section-text">
           Как концентрация может снижаться из-за… концентрации? Любая стрессовая
           ситуация (и резко меняющийся мир в целом) заставляет наш мозг
           постоянно «сканировать» окружающую среду на предмет опасности.
@@ -95,7 +95,7 @@
           давать ей отдохнуть.
         </p>
         <h3 class="heading title-decor">Еда</h3>
-        <p>
+        <p class="section-text">
           Быстрые углеводы» — сахар, белый хлеб, сладости — молниеносно
           доставляют в мозг энергию и помогают ему лучше работать. Но уходит эта
           энергия также быстро, как и приходит. А мы в результате попадаем на
@@ -104,7 +104,7 @@
           быстрых углеводов.
         </p>
         <h3 class="heading title-decor">Гаджеты</h3>
-        <p>
+        <p class="section-text">
           Да-да, это та самая ситуация, когда на экране ноутбука — код, в
           наушниках — подкаст, а на компьютере фоном — ещё и видео с забавными
           утятами. В результате мозг пытается переключиться с одной задачи на
@@ -125,23 +125,25 @@
         <h4 class="heading title-decor five-rules">
           Представьте небо и облака
         </h4>
-        <p>
-          Как концентрация может снижаться из-за… концентрации? Любая стрессовая
-          ситуация (и резко меняющийся мир в целом) заставляет наш мозг
-          постоянно «сканировать» окружающую среду на предмет опасности.
-          Например, читать новости вместо работы. Но быть собранными всё время —
-          невозможно. Концентрация — мышца, и она может не выдержать, если не
-          давать ей отдохнуть.
+        <p class="section-text">
+          Или листья в ручье. Тут дело в лёгкой медитации, которая помогает
+          успокоиться. Ведь часто именно тревожные мысли о сложных задачах как
+          раз и мешают эти сложные задачи делать. В такие моменты можно закрыть
+          глаза и представить, что чистое небо — это вы, а облака — тревожные
+          мысли. И сколько бы их ни было — ясное небо всегда будет где-то там,
+          за тучами, и никуда не денется. Это упражнение поможет вернуться в
+          настоящий момент, а не волноваться о потенциальных проблемах из
+          будущего.
         </p>
         <h4 class="heading title-decor five-rules">Включите музыку</h4>
-        <p>
+        <p class="section-text">
           Но не любую, и не любимую. Любимая может быть связана с сильными
           положительными эмоциями, которые тоже очень сильно отвлекают. Подойдёт
           тихая, спокойная, умеренно-ритмичная. Можно вообще попробовать
           включить плейлист в «белым шумом» или нейромузыкой.
         </p>
         <h4 class="heading title-decor five-rules">Прогуляйтесь</h4>
-        <p>
+        <p class="section-text">
           Или даже пробегитесь. Лучше найти парк или лес: один эксперимент
           показал, что созерцание природы повышает концентрацию, в то время как
           после просмотра городских пейзажей она наоборот понижается. Можно
@@ -150,22 +152,59 @@
           двадцатиминутная прогулка — тоже отличный вариант.
         </p>
         <h4 class="heading title-decor five-rules">Хорошо ешьте</h4>
-        <p>
+        <p class="section-text">
           Мы — не ваша бабушка, но это правда важно. Выбирайте продукты, которые
           препятствуют резким скачкам сахара в крови. Например, с высоким
           содержанием клетчатки: овощи, ягоды, бобовые (нут, чечевица, фасоль),
           коричневый рис, хлеб из цельнозерновой пшеницы.
         </p>
         <h4 class="heading title-decor five-rules">Читайте</h4>
-        <p>
+        <p class="section-text">
           Настоящие бумажные книги. Это правда помогает с концентрацией: чтобы
           прочитать пост в соцсети, достаточно нескольких минут или даже секунд.
           А вот интересная книга способна затянуть и на несколько часов и круто
           тренирует направленное внимание.
         </p>
       </section>
+      <section class="section in-pictures">
+        <h3 class="heading title-decor">А можно в картинках?</h3>
+        <div class="gallery">
+          <img
+            class="images"
+            src="./images/sunset.png"
+            alt="Закат"
+            loading="lazy"
+          />
+          <img
+            class="images"
+            src="./images/ice-cream.png"
+            alt="ice-cream"
+            loading="lazy"
+          />
+          <img
+            class="images"
+            src="./images/tape.png"
+            alt="tape"
+            loading="lazy"
+          />
+          <img
+            class="images"
+            src="./images/books.png"
+            alt="books"
+            loading="lazy"
+          />
+          <img
+            class="images"
+            src="./images/street.png"
+            alt="street"
+            loading="lazy"
+          />
+        </div>
+      </section>
     </main>
-    <footer></footer>
+    <footer class="footer">
+      <h5 class="heading header__title">focus</h5>
+    </footer>
     <script src="./scripts/script.js"></script>
   </body>
 </html>
