--- a/index.html
+++ b/index.html
@@ -6,14 +6,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="color-scheme" content="dark light" />
     <title>Сложно сосредоточиться</title>
-    <link rel="stylesheet" href="./fonts/fonts.css" />
     <link rel="icon" href="./images/favicon.ico" sizes="any" />
     <link rel="icon" href="./images/favicon.svg" type="image/svg+xml" />
+
+    <link rel="stylesheet" href="./fonts/fonts.css" />
+
     <link rel="stylesheet" href="./styles/global.css" />
+
     <link rel="stylesheet" href="./styles/variables.css" />
+
     <link rel="stylesheet" href="./styles/style.css" />
-    <link rel="stylesheet" href="./styles/dark.css" />
     <link rel="stylesheet" href="./styles/light.css" />
+    <link rel="stylesheet" href="./styles/dark.css" />
   </head>
   <body class="page">
     <header class="header decorated-zone">
@@ -67,11 +71,16 @@
               Особенно сложно сосредоточиться, когда задач много и все они —
               важные. Где же легендарная многозадачность, когда она так нужна
               вам (и всем нанимающим менеджерам этого мира)? А дело в том, что
-              её просто не существует. Исследователи выяснили, что мозгу тяжело
-              концентрироваться даже на двух делах одновременно. А когда в поле
-              внимания попадает несколько важных задач, организм паникует и
-              выделяет кортизол и адреналин — «гормоны стресса». Из-за этого мы
-              работаем невнимательно: ошибаемся и быстро устаём.
+              её просто не существует. Исследователи
+              <a
+                href="https://dana.org/article/multicosts-of-multitasking/"
+                class="highlighted-link"
+                >выяснили</a
+              >, что мозгу тяжело концентрироваться даже на двух делах
+              одновременно. А когда в поле внимания попадает несколько важных
+              задач, организм паникует и выделяет кортизол и адреналин —
+              «гормоны стресса». Из-за этого мы работаем невнимательно:
+              ошибаемся и быстро устаём.
             </p>
           </div>
           <div class="section-paragraph">
@@ -112,7 +121,7 @@
           <div class="section-paragraph">
             <h3 class="heading title-decor">Еда</h3>
             <p class="section-text">
-              Быстрые углеводы» — сахар, белый хлеб, сладости — молниеносно
+              «Быстрые углеводы» — сахар, белый хлеб, сладости — молниеносно
               доставляют в мозг энергию и помогают ему лучше работать. Но уходит
               эта энергия также быстро, как и приходит. А мы в результате
               попадаем на «углеводные качели»: как только действие «быстрых
