--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
     <link rel="icon" href="./images/favicon.svg" type="image/svg+xml" />
 
     <link rel="stylesheet" href="./fonts/fonts.css" />
-    <link rel="stylesheet" href="./styles/global.css" />
+    <link rel="stylesheet" href="./styles/globals.css" />
     <link rel="stylesheet" href="./styles/variables.css" />
     <link rel="stylesheet" href="./styles/style.css" />
     <link rel="stylesheet" href="./styles/light.css" />
     <link rel="stylesheet" href="./styles/dark.css" />
   </head>
-  <body class="page">
+  <body class="page padd">
     <header class="header decorated-zone">
       <div class="rec-label">REC</div>
       <nav class="header__theme-menu">
