--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
     <link rel="stylesheet" href="./styles/light.css" />
     <link rel="stylesheet" href="./styles/dark.css" />
   </head>
-  <body class="page padd">
+  <body class="page">
     <header class="header decorated-zone">
-      <div class="rec-label">REC</div>
+      <span class="rec-label" aria-hidden="true">REC</span>
       <nav class="header__theme-menu">
         <ul class="header__theme-menu-list">
           <li class="header__theme-menu-item">
@@ -45,7 +45,7 @@
           </li>
         </ul>
       </nav>
-      <h1 class="heading header__title">no focus</h1>
+      <h1 class="heading title header__title">no focus</h1>
       <div class="header__paragraph">
         <p class="title-decor">
           Что делать, когда не можешь делать ничего <br />
@@ -56,13 +56,12 @@
     </header>
     <main>
       <section class="section focused">
-        <div class="section-name">
-          <h2 class="heading section__title">
-            Почему сосредоточиться так сложно
-          </h2>
-        </div>
+        <h2 class="heading section__title">
+          Почему сосредоточиться так сложно
+        </h2>
+
         <div class="section-main">
-          <div class="section-paragraph">
+          <article class="section-paragraph">
             <h3 class="heading title-decor">Многозадачность</h3>
             <p class="section-text">
               Особенно сложно сосредоточиться, когда задач много и все они —
@@ -79,8 +78,8 @@
               «гормоны стресса». Из-за этого мы работаем невнимательно:
               ошибаемся и быстро устаём.
             </p>
-          </div>
-          <div class="section-paragraph">
+          </article>
+          <article class="section-paragraph">
             <h3 class="heading title-decor">Дофамин</h3>
             <p class="section-text">
               С гормонами стресса всё понятно, но дальше — ещё интереснее. В
@@ -92,19 +91,17 @@
               чувствуем удовольствие. Получается замкнутый круг: чем больше
               отвлекаешься, тем больше удовольствия получаешь.
             </p>
-          </div>
+          </article>
         </div>
       </section>
 
       <section class="section concentration">
-        <div class="section-name">
-          <h2 class="heading section__title">
-            Что снижает концентрацию внимания?
-          </h2>
-        </div>
+        <h2 class="heading section__title">
+          Что снижает концентрацию внимания?
+        </h2>
 
         <div class="section-main">
-          <div class="section-paragraph">
+          <article class="section-paragraph">
             <h3 class="heading title-decor">Многозадачность</h3>
             <p class="section-text">
               Как концентрация может снижаться из-за… концентрации? Любая
@@ -114,8 +111,8 @@
               собранными всё время — невозможно. Концентрация — мышца, и она
               может не выдержать, если не давать ей отдохнуть.
             </p>
-          </div>
-          <div class="section-paragraph">
+          </article>
+          <article class="section-paragraph">
             <h3 class="heading title-decor">Еда</h3>
             <p class="section-text">
               «Быстрые углеводы» — сахар, белый хлеб, сладости — молниеносно
@@ -125,8 +122,8 @@
               углеводов» заканчивается, мы чувствуем усталость и сонливость. И
               хотим ещё больше быстрых углеводов.
             </p>
-          </div>
-          <div class="section-paragraph">
+          </article>
+          <article class="section-paragraph">
             <h3 class="heading title-decor">Гаджеты</h3>
             <p class="section-text">
               Да-да, это та самая ситуация, когда на экране ноутбука — код, в
@@ -137,25 +134,22 @@
               Вот и получается, что чем больше времени мы проводим в гаджетах,
               тем больше времени затем нужно, чтобы вернуться к работе.
             </p>
-          </div>
+          </article>
         </div>
       </section>
 
       <section class="section gold__fish">
-        <div class="section-name">
-          <h2 class="heading section__title">
-            Как концентрироваться лучше, чем золотая рыбка (то есть дольше трёх
-            секунд)
-          </h2>
-        </div>
+        <h2 class="heading section__title">
+          Как концентрироваться лучше, чем золотая рыбка (то есть дольше трёх
+          секунд)
+        </h2>
 
         <div class="section-main">
-          <div class="section-paragraph">
-            <h3 class="heading title-decor">
-              5 простых (на самом деле не очень) советов
-            </h3>
-          </div>
-          <div class="section-paragraph">
+          <h3 class="heading title-decor">
+            5 простых (на самом деле не очень) советов
+          </h3>
+
+          <article class="section-paragraph">
             <h4 class="heading title-decor five-rules">
               Представьте небо и облака
             </h4>
@@ -169,9 +163,9 @@
               вернуться в настоящий момент, а не волноваться о потенциальных
               проблемах из будущего.
             </p>
-          </div>
+          </article>
 
-          <div class="section-paragraph">
+          <article class="section-paragraph">
             <h4 class="heading title-decor five-rules">Включите музыку</h4>
             <p class="section-text">
               Но не любую, и не любимую. Любимая может быть связана с сильными
@@ -179,8 +173,8 @@
               Подойдёт тихая, спокойная, умеренно-ритмичная. Можно вообще
               попробовать включить плейлист в «белым шумом» или нейромузыкой.
             </p>
-          </div>
-          <div class="section-paragraph">
+          </article>
+          <article class="section-paragraph">
             <h4 class="heading title-decor five-rules">Прогуляйтесь</h4>
             <p class="section-text">
               Или даже пробегитесь. Лучше найти парк или лес: один эксперимент
@@ -191,8 +185,8 @@
               работать. Но и простая двадцатиминутная прогулка — тоже отличный
               вариант.
             </p>
-          </div>
-          <div class="section-paragraph">
+          </article>
+          <article class="section-paragraph">
             <h4 class="heading title-decor five-rules">Хорошо ешьте</h4>
             <p class="section-text">
               Мы — не ваша бабушка, но это правда важно. Выбирайте продукты,
@@ -200,8 +194,8 @@
               высоким содержанием клетчатки: овощи, ягоды, бобовые (нут,
               чечевица, фасоль), коричневый рис, хлеб из цельнозерновой пшеницы.
             </p>
-          </div>
-          <div class="section-paragraph">
+          </article>
+          <article class="section-paragraph">
             <h4 class="heading title-decor five-rules">Читайте</h4>
             <p class="section-text">
               Настоящие бумажные книги. Это правда помогает с концентрацией:
@@ -209,12 +203,12 @@
               даже секунд. А вот интересная книга способна затянуть и на
               несколько часов и круто тренирует направленное внимание.
             </p>
-          </div>
+          </article>
         </div>
       </section>
 
       <section class="section in-pictures">
-        <h3 class="heading title-decor">А можно в картинках?</h3>
+        <h2 class="heading title-decor">А можно в картинках?</h2>
         <div class="gallery">
           <div class="images item1">
             <img src="./images/sunset.png" alt="Закат" loading="lazy" />
@@ -234,8 +228,8 @@
         </div>
       </section>
     </main>
-    <footer class="footer">
-      <h5 class="heading footer__title">focus</h5>
+    <footer class="footer decorated-zone">
+      <h1 class="heading title footer__title">focus</h1>
     </footer>
     <script src="./scripts/script.js"></script>
   </body>
